[gd_scene load_steps=12 format=3 uid="uid://cmj60xakurhk0"]

[ext_resource type="Script" uid="uid://dm3l0pvqinfut" path="res://src/hud/HUD.gd" id="1_5wqol"]
[ext_resource type="FontFile" uid="uid://b1c3fty8httvk" path="res://addons/bones/fonts/at01.ttf" id="2_1a27s"]
[ext_resource type="PackedScene" uid="uid://drbmqe5fgckq2" path="res://src/ui/notifications/Notifications.tscn" id="3_fxnlu"]
[ext_resource type="PackedScene" uid="uid://dq1rff2gu3q68" path="res://addons/bones/actions/ActionInputIcon.tscn" id="3_ocg6b"]
[ext_resource type="Texture2D" uid="uid://o2pra12ik1cg" path="res://assets/kenney-input-prompts/Keyboard & Mouse/Default/keyboard_z.png" id="4_bq2ar"]
[ext_resource type="Texture2D" uid="uid://biuatxkdfw123" path="res://assets/kenney-input-prompts/Keyboard & Mouse/Default/keyboard_f.png" id="5_1lmlq"]
[ext_resource type="Texture2D" uid="uid://cthfejrkt0eh7" path="res://assets/kenney-input-prompts/Keyboard & Mouse/Default/keyboard_r.png" id="5_eiimu"]
[ext_resource type="Theme" uid="uid://cul4fuxbykddp" path="res://src/ui/BlueButtonTheme.tres" id="5_h4785"]
[ext_resource type="Theme" uid="uid://d36tu8qosbiom" path="res://src/ui/RedButtonTheme.tres" id="7_a5gjb"]
[ext_resource type="Theme" uid="uid://beg0yvicrirg0" path="res://src/ui/GreenButtonTheme.tres" id="8_2plpm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_li620"]
bg_color = Color(0.0627451, 0.0627451, 0.0627451, 0)

[node name="DotHopHUD" type="CanvasLayer" groups=["hud"]]
script = ExtResource("1_5wqol")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
alignment = 1

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="LevelNum" type="RichTextLabel" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(260, 0)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_1a27s")
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[center]12 puzzles left[/center]"
fit_content = true
scroll_active = false

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="LevelMessage" type="RichTextLabel" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_1a27s")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "[center]Now for something a bit more interesting	[/center]"
fit_content = true
scroll_active = false

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="DotsRemaining" type="RichTextLabel" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_1a27s")
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[center]0/8 Dots[/center]"
fit_content = true
scroll_active = false

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="ActionButtonList" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
alignment = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/HBoxContainer/ActionButtonList"]
layout_mode = 2

[node name="PauseButton" type="Button" parent="VBoxContainer/HBoxContainer/ActionButtonList"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
focus_mode = 1
theme = ExtResource("8_2plpm")
text = "Menu"

[node name="ShuffleButton" type="Button" parent="VBoxContainer/HBoxContainer/ActionButtonList"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
focus_mode = 1
theme = ExtResource("8_2plpm")
text = "Shuffle"

[node name="UndoButton" type="Button" parent="VBoxContainer/HBoxContainer/ActionButtonList"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 1
theme = ExtResource("5_h4785")
text = "Undo"

[node name="ResetButton" type="Button" parent="VBoxContainer/HBoxContainer/ActionButtonList"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
focus_mode = 1
theme = ExtResource("7_a5gjb")
text = "Reset"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/ActionButtonList"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="KeyInputHints" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/HBoxContainer/KeyInputHints"]
visible = false
layout_mode = 2

[node name="ShuffleControlHint" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/KeyInputHints"]
layout_mode = 2

[node name="ShuffleInputIcon" parent="VBoxContainer/HBoxContainer/KeyInputHints/ShuffleControlHint" instance=ExtResource("3_ocg6b")]
unique_name_in_owner = true
visible = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("5_1lmlq")
input_text = "F"

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/HBoxContainer/KeyInputHints/ShuffleControlHint"]
layout_mode = 2

[node name="ShuffleLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/KeyInputHints/ShuffleControlHint/CenterContainer"]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/normal_font = ExtResource("2_1a27s")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "Shuffle"
fit_content = true
scroll_active = false

[node name="UndoControlHint" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/KeyInputHints"]
unique_name_in_owner = true
layout_mode = 2

[node name="UndoInputIcon" parent="VBoxContainer/HBoxContainer/KeyInputHints/UndoControlHint" instance=ExtResource("3_ocg6b")]
unique_name_in_owner = true
visible = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("4_bq2ar")
input_text = "Z"

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/HBoxContainer/KeyInputHints/UndoControlHint"]
layout_mode = 2

[node name="UndoLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/KeyInputHints/UndoControlHint/CenterContainer"]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/normal_font = ExtResource("2_1a27s")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "Undo"
fit_content = true
scroll_active = false

[node name="ResetControlHint" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/KeyInputHints"]
unique_name_in_owner = true
layout_mode = 2

[node name="ResetInputIcon" parent="VBoxContainer/HBoxContainer/KeyInputHints/ResetControlHint" instance=ExtResource("3_ocg6b")]
unique_name_in_owner = true
visible = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
texture = ExtResource("5_eiimu")
input_text = "R"

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/HBoxContainer/KeyInputHints/ResetControlHint"]
layout_mode = 2

[node name="ResetLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer/KeyInputHints/ResetControlHint/CenterContainer"]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/normal_font = ExtResource("2_1a27s")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "Reset"
fit_content = true
scroll_active = false

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/KeyInputHints"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_li620")

[node name="Notifications" parent="VBoxContainer/HBoxContainer/PanelContainer" instance=ExtResource("3_fxnlu")]
layout_mode = 2
